@@ -1,3 +1,9 @@
+TAG: littriageload-6-0-14-6
+DATE: 09/04/2019
+STAFF: lec 
+TR13152/fix setSupplemental()
+check for extractedText = None
+
 TAG: littriageload-6-0-14-5
 DATE: 08/20/2019
 STAFF: lec 
